[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firelift"
version = "0.1.0"
description = "HTTP client for Prometheus /metrics and instant-query APIs, plus cluster exporter helpers"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Alessandro Magnosi (aka KlezVirus)" }]
keywords = ["prometheus", "slo", "metrics", "thanos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/amagnosi-so/firelift"
Repository = "https://github.com/amagnosi-so/firelift"

[project.scripts]
firelift = "firelift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
